lox-tests/tests/variable/duplicate_parameter.stderr
ERROR: Already declared variable 'arg' in this local scope
 --> 2:14
  |
2 | fun foo(arg, arg) {
  |              ^-^
